[workspace]
members = [
  "crates/common",
  "crates/protocol",
  "crates/world",
  "crates/wallet",
  "crates/relay",
  "crates/client"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
futures-util = "0.3"
rand = "0.8"
ratatui = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"
tokio-socks = "0.5"
url = "2.5"
uuid = { version = "1.7", features = ["v4"] }
toml = "0.8"
