[package]
name = "street-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
ed25519-dalek.workspace = true
futures-util.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tokio-socks.workspace = true
url.workspace = true
x25519-dalek.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
sha2.workspace = true
base64.workspace = true

street-common = { path = "../common" }
street-protocol = { path = "../protocol" }
street-world = { path = "../world" }
