[package]
name = "street-relay"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
uuid.workspace = true
rand.workspace = true
ed25519-dalek.workspace = true

street-common = { path = "../common" }
street-protocol = { path = "../protocol" }
street-world = { path = "../world" }
street-wallet = { path = "../wallet" }
